--- a/hyprland.conf
+++ b/hyprland.conf
@@ -32,7 +32,7 @@ monitor=,preferred,auto, 1.666667
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 
 
@@ -197,8 +197,10 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
 }
+
+# NUEVA SINTAXIS DE GESTOS (sustituye a workspace_swipe)
+gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -226,6 +228,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, K, exec, ~/.local/bin/screenshots
 
 # Subir brillo
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
