--- a/hyprland.conf
+++ b/hyprland.conf
@@ -32,8 +32,9 @@ monitor=,preferred,auto, 1.666667
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = thunar
+$fileManager = $terminal -e nnn
 $menu = wofi --show drun
+$editor = $terminal -e nvim
 
 
 #################
@@ -76,7 +77,7 @@ general {
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
+    # Enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
@@ -199,8 +200,27 @@ input {
 gestures {
 }
 
-# NUEVA SINTAXIS DE GESTOS (sustituye a workspace_swipe)
-gesture = 3, horizontal, workspace
+# -------------------------
+#  CUSTOM GESTURES (0.51+)
+# -------------------------
+# 3 fingers up  → open the default browser app (no URL, no new tab)
+gesture = 3, up, dispatcher, exec, bash -lc 'if [ -n "$BROWSER" ]; then exec "$BROWSER"; else desk=$(xdg-mime query default x-scheme-handler/http 2>/dev/null); if [ -n "$desk" ] && command -v gtk-launch >/dev/null 2>&1; then exec gtk-launch "$desk"; else exec firefox || exec chromium || exec google-chrome || exec brave || exec vivaldi; fi; fi'
+
+# 3 fingers down → open default file manager
+gesture = 3, down, dispatcher, exec, $fileManager
+
+# 3 fingers left → open terminal
+gesture = 3, left, dispatcher, exec, $terminal
+
+# 3 fingers right → open Neovim in terminal
+gesture = 3, right, dispatcher, exec, $terminal -e nvim
+
+# 4 fingers down → lock session (Hyprlock)
+gesture = 4, down, dispatcher, exec, hyprlock
+
+# 4 fingers up → show current time for 2s (built-in notifier)
+gesture = 4, up, dispatcher, exec, bash -lc 'hyprctl notify -1 2000 0 "$(date +%H:%M:%S)"'
+
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -221,7 +241,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, C, exec, zeditor
+bind = $mainMod, C, exec, $editor
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -230,10 +250,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, K, exec, ~/.local/bin/screenshots
 
-# Subir brillo
+# Increase brightness
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
 
-# Bajar brillo
+# Decrease brightness
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 # Move focus with mainMod + arrow keys
@@ -302,7 +322,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
-# Ignore maximize requests from apps. You'll probably like this.
+# Ignore maximize requests from apps
 windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
